deploy: 596aefd4860c21b5a2ea4e1e7d933f43a76586b4

--- a/about/index.html
+++ b/about/index.html
@@ -1,4 +1,4 @@
-<!doctype html><html><head><meta charset=utf-8><meta http-equiv=x-ua-compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1,shrink-to-fit=no"><title>About - Snow Kluster's Blog</title><meta name=description content="Hi I&rsquo;m Rohan Kaushik or as i go by my online alias Snow-Kluster You can find me on Github"><meta name=author content="Snow Kluster"><link href=https://unpkg.com/@master/normal.css rel=stylesheet><script src=https://unpkg.com/@master/style@1.5.0></script>
+<!doctype html><html><head><meta charset=utf-8><meta http-equiv=x-ua-compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1,shrink-to-fit=no"><title>About - Snow Kluster's Blog</title><meta name=description content="Hi I&rsquo;m Rohan Kaushik or as I go by my online alias Snow-Kluster. You can find me on Github"><meta name=author content="Snow Kluster"><link href=https://unpkg.com/@master/normal.css rel=stylesheet><script src=https://unpkg.com/@master/style@1.5.0></script>
 <script src=https://unpkg.com/@master/styles@1.13.0></script>
 <script src=https://unpkg.com/master-styles-group></script>
 <script src=https://unpkg.com/themes.js></script>
@@ -47,5 +47,5 @@ _:where(th,p_code,li_code,a,mark){font:semibold;_font:medium@dark}
 _:where(ul){list-style-type:disc}
 _:where(ul,ol,blockquote){pl:1.5em}
 _:where(video,img){max-width:full}
-_:where(a,mark){text-underline-offset:3}"><h1 id=hi>Hi</h1><p>I&rsquo;m <strong>Rohan Kaushik</strong> or as i go by my online alias <strong>Snow-Kluster</strong>
+_:where(a,mark){text-underline-offset:3}"><h1 id=hi>Hi</h1><p>I&rsquo;m <strong>Rohan Kaushik</strong> or as I go by my online alias <strong>Snow-Kluster</strong>.
 You can find me on <a href=https://github.com/snow-kluster>Github</a></p></div></article><footer class=py:24><div class="f:fade-30 f:14 mb:8">© Snow-Kluster</div><div class="f:fade-60 f:12">Theme <a class=f:bold href=https://github.com/serkodev/holy _target=_blank>Holy</a></div></footer></div></div></body></html>
